# fast-api-starter

./: .flake8  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: app.py  config.py  server.py
app/services/: __init__.py  neo4j.py  service.py
docker/neo4j/: Dockerfile
server/: __init__.py  app.py  config.py  server.py
tests/: test_app.py
